<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical"
    tools:context="alecami.arqdesis.usjt.br.gerenciamentopredial.LoginActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/login_sistema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/login_sistema" />

        <EditText
            android:layout_below="@id/login_sistema"
            android:id="@+id/senha_sistema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/senha_sistema" />

        <Button
            android:layout_below="@id/senha_sistema"
            android:layout_centerHorizontal="@id/senha_sistema"
            android:layout_width="97dp"
            android:layout_height="45dp"
            android:text="@string/botao_login"
            android:onClick="loginSistema" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
